Closed Bug 1750161 Opened 2 years ago Closed 2 years ago

Intermittent toolkit/components/extensions/test/xpcshell/test_ext_alarms.js | application crashed [@ mozilla::dom::ToJSValue(JSContext*, mozilla::ErrorResult&&, JS::MutableHandle<JS::Value>)]

Categories

(WebExtensions :: General, defect)

defect

Tracking

(firefox-esr91 wontfix, firefox-esr102 wontfix, firefox102 wontfix, firefox103 wontfix, firefox104 fixed)

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox-esr102 --- wontfix
firefox102 --- wontfix
firefox103 --- wontfix
firefox104 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: rpl)

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=364102364&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/VOQHGSlrQG2-09qq5Q2ypg/runs/0/artifacts/public/logs/live_backing.log


[task 2022-01-14T07:16:39.914Z] 07:16:39     INFO -  TEST-PASS | toolkit/components/url-classifier/tests/unit/test_partial.js | took 18820ms
[task 2022-01-14T07:16:46.966Z] 07:16:46  WARNING -  PROCESS-CRASH | xpcshell.ini:toolkit/components/extensions/test/xpcshell/test_ext_alarms.js | application crashed [@ mozilla::dom::ToJSValue(JSContext*, mozilla::ErrorResult&&, JS::MutableHandle<JS::Value>)]
[task 2022-01-14T07:16:46.966Z] 07:16:46     INFO -  Mozilla crash reason: MOZ_DIAGNOSTIC_ASSERT(false) (JS_GetPendingException(aCx, aValue))
[task 2022-01-14T07:16:46.967Z] 07:16:46     INFO -  Crash dump filename: C:\Users\task_1642142868\AppData\Local\Temp\xpc-other-druqr6yy\3c8d4fb5-cfa7-4352-9495-de3f08f380d4.dmp
[task 2022-01-14T07:16:46.967Z] 07:16:46     INFO -  Operating system: Windows NT
[task 2022-01-14T07:16:46.967Z] 07:16:46     INFO -                    6.1.7601 Service Pack 1
[task 2022-01-14T07:16:46.967Z] 07:16:46     INFO -  CPU: x86
[task 2022-01-14T07:16:46.968Z] 07:16:46     INFO -       GenuineIntel family 6 model 63 stepping 2
[task 2022-01-14T07:16:46.968Z] 07:16:46     INFO -       8 CPUs
[task 2022-01-14T07:16:46.968Z] 07:16:46     INFO -  Crash reason:  EXCEPTION_BREAKPOINT
[task 2022-01-14T07:16:46.968Z] 07:16:46     INFO -  Crash address: 0x59640663
[task 2022-01-14T07:16:46.969Z] 07:16:46     INFO -  Process uptime: 5 seconds
[task 2022-01-14T07:16:46.969Z] 07:16:46     INFO -  Thread 19  (crashed)
[task 2022-01-14T07:16:46.969Z] 07:16:46     INFO -   0  xul.dll!mozilla::dom::ToJSValue(JSContext*, mozilla::ErrorResult&&, JS::MutableHandle<JS::Value>) [ToJSValue.cpp:99d93c593aadb15810aba078194b97c5be328827 : 57 + 0x0]
[task 2022-01-14T07:16:46.970Z] 07:16:46     INFO -      eip = 0x59640663   esp = 0x08a3ef6c   ebp = 0x08a3ef74   ebx = 0x06b14000
[task 2022-01-14T07:16:46.970Z] 07:16:46     INFO -      esi = 0x06b14000   edi = 0x08a3ef98   eax = 0x6b91c6e8   ecx = 0x06b14000
[task 2022-01-14T07:16:46.970Z] 07:16:46     INFO -      edx = 0x5d77eb48   efl = 0x00000246
[task 2022-01-14T07:16:46.970Z] 07:16:46     INFO -      Found by: given as instruction pointer in context
[task 2022-01-14T07:16:46.971Z] 07:16:46     INFO -   1  xul.dll!mozilla::dom::Promise::MaybeSomething<mozilla::ErrorResult>(mozilla::ErrorResult&&, void (mozilla::dom::Promise::*)(JSContext*, JS::Handle<JS::Value>)) [Promise.h:99d93c593aadb15810aba078194b97c5be328827 : 330 + 0x9]
[task 2022-01-14T07:16:46.971Z] 07:16:46     INFO -      eip = 0x5810f1c0   esp = 0x08a3ef7c   ebp = 0x08a3f014   ebx = 0x06b14000
[task 2022-01-14T07:16:46.972Z] 07:16:46     INFO -      esi = 0x06c817e0   edi = 0x5a039310
[task 2022-01-14T07:16:46.972Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.972Z] 07:16:46     INFO -   2  xul.dll!mozilla::extensions::ExtensionListenerCallWorkerRunnable::WorkerRun(JSContext*, mozilla::dom::WorkerPrivate*) [ExtensionEventListener.cpp:99d93c593aadb15810aba078194b97c5be328827 : 494 + 0x35]
[task 2022-01-14T07:16:46.973Z] 07:16:46     INFO -      eip = 0x5b410cd0   esp = 0x08a3f01c   ebp = 0x08a3f128   ebx = 0x06c99310
[task 2022-01-14T07:16:46.973Z] 07:16:46     INFO -      esi = 0x08a3f070   edi = 0x06c817e0
[task 2022-01-14T07:16:46.973Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.973Z] 07:16:46     INFO -   3  xul.dll!mozilla::dom::WorkerRunnable::Run() [WorkerRunnable.cpp:99d93c593aadb15810aba078194b97c5be328827 : 378 + 0x26]
[task 2022-01-14T07:16:46.974Z] 07:16:46     INFO -      eip = 0x5a015a77   esp = 0x08a3f130   ebp = 0x08a3f1f4   ebx = 0x5b410580
[task 2022-01-14T07:16:46.974Z] 07:16:46     INFO -      esi = 0x06c99310   edi = 0x06b14000
[task 2022-01-14T07:16:46.974Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.975Z] 07:16:46     INFO -   4  xul.dll!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:99d93c593aadb15810aba078194b97c5be328827 : 1189 + 0xd]
[task 2022-01-14T07:16:46.975Z] 07:16:46     INFO -      eip = 0x5807f1e7   esp = 0x08a3f1fc   ebp = 0x08a3f32c   ebx = 0x06c99310
[task 2022-01-14T07:16:46.975Z] 07:16:46     INFO -      esi = 0x06c64050   edi = 0x08a3f2b0
[task 2022-01-14T07:16:46.976Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.976Z] 07:16:46     INFO -   5  xul.dll!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:99d93c593aadb15810aba078194b97c5be328827 : 467 + 0x18]
[task 2022-01-14T07:16:46.976Z] 07:16:46     INFO -      eip = 0x5808334f   esp = 0x08a3f334   ebp = 0x08a3f350   ebx = 0x00000000
[task 2022-01-14T07:16:46.976Z] 07:16:46     INFO -      esi = 0x06c64050   edi = 0x06c64050
[task 2022-01-14T07:16:46.977Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.977Z] 07:16:46     INFO -   6  xul.dll!mozilla::dom::WorkerPrivate::DoRunLoop(JSContext*) [WorkerPrivate.cpp:99d93c593aadb15810aba078194b97c5be328827 : 3113 + 0xb]
[task 2022-01-14T07:16:46.978Z] 07:16:46     INFO -      eip = 0x5a00da80   esp = 0x08a3f358   ebp = 0x08a3f3e4   ebx = 0x00000001
[task 2022-01-14T07:16:46.978Z] 07:16:46     INFO -      esi = 0x0148ac00   edi = 0x06c64050
[task 2022-01-14T07:16:46.978Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.978Z] 07:16:46     INFO -   7  xul.dll!mozilla::dom::workerinternals::`anonymous namespace'::WorkerThreadPrimaryRunnable::Run() [RuntimeService.cpp:99d93c593aadb15810aba078194b97c5be328827 : 2168 + 0x8]
[task 2022-01-14T07:16:46.979Z] 07:16:46     INFO -      eip = 0x59ffe28a   esp = 0x08a3f3ec   ebp = 0x08a3f504   ebx = 0x06b05501
[task 2022-01-14T07:16:46.979Z] 07:16:46     INFO -      esi = 0x06b14000   edi = 0x06c81240
[task 2022-01-14T07:16:46.979Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.980Z] 07:16:46     INFO -   8  xul.dll!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:99d93c593aadb15810aba078194b97c5be328827 : 1189 + 0xd]
[task 2022-01-14T07:16:46.980Z] 07:16:46     INFO -      eip = 0x5807f1e7   esp = 0x08a3f50c   ebp = 0x08a3f644   ebx = 0x06c81240
[task 2022-01-14T07:16:46.980Z] 07:16:46     INFO -      esi = 0x06c64050   edi = 0x08a3f5c0
[task 2022-01-14T07:16:46.980Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.981Z] 07:16:46     INFO -   9  xul.dll!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:99d93c593aadb15810aba078194b97c5be328827 : 467 + 0x18]
[task 2022-01-14T07:16:46.981Z] 07:16:46     INFO -      eip = 0x5808334f   esp = 0x08a3f64c   ebp = 0x08a3f668   ebx = 0x58588f01
[task 2022-01-14T07:16:46.981Z] 07:16:46     INFO -      esi = 0x06c64050   edi = 0x08a3f704
[task 2022-01-14T07:16:46.982Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.982Z] 07:16:46     INFO -  10  xul.dll!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:99d93c593aadb15810aba078194b97c5be328827 : 330 + 0x9]
[task 2022-01-14T07:16:46.982Z] 07:16:46     INFO -      eip = 0x585c2f58   esp = 0x08a3f670   ebp = 0x08a3f698   ebx = 0x58588f00
[task 2022-01-14T07:16:46.983Z] 07:16:46     INFO -      esi = 0x01457730   edi = 0x08a3f704
[task 2022-01-14T07:16:46.983Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.983Z] 07:16:46     INFO -  11  xul.dll!MessageLoop::RunHandler() [message_loop.cc:99d93c593aadb15810aba078194b97c5be328827 : 324 + 0x13]
[task 2022-01-14T07:16:46.984Z] 07:16:46     INFO -      eip = 0x58588739   esp = 0x08a3f6a0   ebp = 0x08a3f6d0   ebx = 0x585c2e40
[task 2022-01-14T07:16:46.984Z] 07:16:46     INFO -      esi = 0x08a3f704   edi = 0x01457730
[task 2022-01-14T07:16:46.984Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.984Z] 07:16:46     INFO -  12  xul.dll!MessageLoop::Run() [message_loop.cc:99d93c593aadb15810aba078194b97c5be328827 : 306 + 0x4]
[task 2022-01-14T07:16:46.985Z] 07:16:46     INFO -      eip = 0x58588698   esp = 0x08a3f6d8   ebp = 0x08a3f6f0   ebx = 0x08a3f704
[task 2022-01-14T07:16:46.985Z] 07:16:46     INFO -      esi = 0x01459310   edi = 0x06c64050
[task 2022-01-14T07:16:46.985Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.986Z] 07:16:46     INFO -  13  xul.dll!static nsThread::ThreadFunc(void*) [nsThread.cpp:99d93c593aadb15810aba078194b97c5be328827 : 391 + 0x6]
[task 2022-01-14T07:16:46.986Z] 07:16:46     INFO -      eip = 0x5807cd64   esp = 0x08a3f6f8   ebp = 0x08a3f7d4   ebx = 0x08a3f704
[task 2022-01-14T07:16:46.986Z] 07:16:46     INFO -      esi = 0x01459310   edi = 0x06c64050
[task 2022-01-14T07:16:46.986Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.987Z] 07:16:46     INFO -  14  nss3.dll!_PR_NativeRunThread(void*) [pruthr.c:99d93c593aadb15810aba078194b97c5be328827 : 399 + 0xe]
[task 2022-01-14T07:16:46.987Z] 07:16:46     INFO -      eip = 0x6b7028a5   esp = 0x08a3f7dc   ebp = 0x08a3f7fc   ebx = 0x01427310
[task 2022-01-14T07:16:46.987Z] 07:16:46     INFO -      esi = 0x01459310   edi = 0x06c29430
[task 2022-01-14T07:16:46.988Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.988Z] 07:16:46     INFO -  15  nss3.dll!pr_root(void*) [w95thred.c:99d93c593aadb15810aba078194b97c5be328827 : 139 + 0xe]
[task 2022-01-14T07:16:46.988Z] 07:16:46     INFO -      eip = 0x6b6f5a56   esp = 0x08a3f804   ebp = 0x08a3f80c   ebx = 0x00384ff8
[task 2022-01-14T07:16:46.989Z] 07:16:46     INFO -      esi = 0x06c29430   edi = 0x00384ff8
[task 2022-01-14T07:16:46.989Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.989Z] 07:16:46     INFO -  16  ucrtbase.dll!thread_start<unsigned int (__stdcall*)(void *)> + 0x3e
[task 2022-01-14T07:16:46.989Z] 07:16:46     INFO -      eip = 0x6b22e16f   esp = 0x08a3f814   ebp = 0x08a3f848   ebx = 0x00384ff8
[task 2022-01-14T07:16:46.990Z] 07:16:46     INFO -      esi = 0x6b6f5a40   edi = 0x00384ff8
[task 2022-01-14T07:16:46.990Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.990Z] 07:16:46     INFO -  17  kernel32.dll!BaseThreadInitThunk + 0x11
[task 2022-01-14T07:16:46.991Z] 07:16:46     INFO -      eip = 0x7747ef3c   esp = 0x08a3f850   ebp = 0x08a3f854   ebx = 0x00384ff8
[task 2022-01-14T07:16:46.991Z] 07:16:46     INFO -      esi = 0x6b6f5a40   edi = 0x00384ff8
[task 2022-01-14T07:16:46.991Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.991Z] 07:16:46     INFO -  18  mozglue.dll!patched_BaseThreadInitThunk(int, void*, void*) [WindowsDllBlocklist.cpp:99d93c593aadb15810aba078194b97c5be328827 : 574 + 0xa]
[task 2022-01-14T07:16:46.992Z] 07:16:46     INFO -      eip = 0x6b8d5b78   esp = 0x08a3f85c   ebp = 0x08a3f894   ebx = 0x00384ff8
[task 2022-01-14T07:16:46.992Z] 07:16:46     INFO -      esi = 0x6b6f5a40   edi = 0x00384ff8
[task 2022-01-14T07:16:46.992Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.993Z] 07:16:46     INFO -  19  ntdll.dll!__RtlUserThreadStart + 0x26
[task 2022-01-14T07:16:46.993Z] 07:16:46     INFO -      eip = 0x77573618   esp = 0x08a3f89c   ebp = 0x08a3f8d4   ebx = 0x00384ff8
[task 2022-01-14T07:16:46.993Z] 07:16:46     INFO -      esi = 0x00000000   edi = 0x00000000
[task 2022-01-14T07:16:46.993Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.994Z] 07:16:46     INFO -  20  ntdll.dll!_RtlUserThreadStart + 0x1a
[task 2022-01-14T07:16:46.994Z] 07:16:46     INFO -      eip = 0x775735eb   esp = 0x08a3f8dc   ebp = 0x08a3f8ec   ebx = 0x00384ff8
[task 2022-01-14T07:16:46.994Z] 07:16:46     INFO -      esi = 0x00000000   edi = 0x00000000
[task 2022-01-14T07:16:46.994Z] 07:16:46     INFO -      Found by: call frame info
[task 2022-01-14T07:16:46.995Z] 07:16:46     INFO -  Thread 0
Assignee: nobody → lgreco
Status: NEW → ASSIGNED
Pushed by luca.greco@alcacoop.it:
https://hg.mozilla.org/integration/autoland/rev/3c5f033ebc3b
ExtensionListenerCallWorkerRunnable::WorkerRun should explicitly check for uncatchale exception. r=baku
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: