Bug 1750161 - ExtensionListenerCallWorkerRunnable::WorkerRun should explicitly check for uncatchale exception. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D148950